--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,5 +18,16 @@ jobs:
       - name: Restore nuget
         run: nuget restore
       - name: Android
-        run: msbuild /t:restore ./Swimclub.Mobile/Swimclub.Mobile.Android/Swimclub.Droid.csproj
-          
+        run: msbuild /t:restore /p:Configuration=Debug ./Swimclub.Mobile/Swimclub.Mobile.Android/Swimclub.Droid.csproj
+  ASP.NET:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.301
+      - name: Restore nuget
+        run: nuget restore
+      - name: ASP.NET
+        run: msbuild /t:restore /p:Configuration=Debug ./Swimclub.REST/Swimclub.REST.csproj
