--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,3 +31,15 @@ jobs:
         run: nuget restore
       - name: ASPNET
         run: msbuild /t:restore /p:Configuration=Debug ./Swimclub.REST/Swimclub.REST.csproj
+  UNITTESTING:
+    runs-on: macos-latest
+    steps:
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.301
+      - name: Restore nuget
+        run: nuget restore
+      - name: UNITTEST
+        run: dotnet test /Swimclub.MSTEST/Swimclub.MSTest.csproj
+        
