--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Restore nuget
         run: nuget restore
       - name: UNITTEST
-        run: dotnet test /Swimclub.MSTEST/Swimclub.MSTest.csproj
+        run: dotnet test ./Swimclub.MSTEST/Swimclub.MSTest.csproj
         
