--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  Android:
+  Build:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,19 +19,10 @@ jobs:
         run: nuget restore
       - name: Android
         run: msbuild /t:restore /p:Configuration=Debug ./Swimclub.Mobile/Swimclub.Mobile.Android/Swimclub.Droid.csproj
-  ASPNET:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.301
-      - name: Restore nuget
-        run: nuget restore
       - name: ASPNET
         run: msbuild /t:restore /p:Configuration=Debug ./Swimclub.REST/Swimclub.REST.csproj
-  UNITTESTING:
+      
+  Testing:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
