--- a/Swimclub.REST/appsettings.json
+++ b/Swimclub.REST/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Info": {
+    "title": "The Landon Hotel West End London",
+    "website":  "www.landonhotel.com"
+  }
 }
