User database and it's context is created That database is seeded with a test admin user There is a user login endpoint. Does not return a token or do any claims. That will be done soon.

--- a/Swimclub.REST/appsettings.json
+++ b/Swimclub.REST/appsettings.json
@@ -7,8 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Info": {
-    "title": "The Landon Hotel West End London",
-    "website":  "www.landonhotel.com"
+  "AuthSettings": {
+    "Key": "SuperSecretKey"
+  },
+  "DatabaseSettings": {
+    "UserPassword": "temp"
   }
 }
