Successfully returns a bearer token for concurrent requests

--- a/Swimclub.REST/appsettings.json
+++ b/Swimclub.REST/appsettings.json
@@ -8,7 +8,9 @@
   },
   "AllowedHosts": "*",
   "AuthSettings": {
-    "Key": "SuperSecretKey"
+    "Audience": "http://localhost:44362",
+    "Issuer": "http://localhost:44362",
+    "Key": "TheFollowingIsTheSecretKey 7234"
   },
   "DatabaseSettings": {
     "UserPassword": "temp"
