Added pics to each list iteration

--- a/Swimclub.Mobile/Swimclub.Mobile.Android/Swimclub.Droid.csproj
+++ b/Swimclub.Mobile/Swimclub.Mobile.Android/Swimclub.Droid.csproj
@@ -98,6 +98,12 @@
       <Name>Swimclub.Mobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\greyMinus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\greyPlus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
