I've added more datastructures and created a student database, db context and controller to return all students. will need auth.

--- a/Swimclub.REST/appsettings.json
+++ b/Swimclub.REST/appsettings.json
@@ -13,6 +13,8 @@
     "Key": "TheFollowingIsTheSecretKey 7234"
   },
   "DatabaseSettings": {
-    "UserPassword": "temp"
+    "UserPassword": "temp",
+    "StudentPassword": "temp",
+    "ResourcePassword": "temp"
   }
 }
