Did a big commit here. I've changed the student list page to now go and fetch whats on the server. and it works
For this to work, you need to run the server in the Swimclub.REST config, if you build it then it will be in the bin/debug/net5/swimclub.rest.exe

BUT before you do that, find out your IP, and replace my ip that is in the launchSettings.json, as the emulator will connect through your PC IP.

Also you need to change the IP in the IRestService

--- a/Swimclub.REST/Swimclub.REST.csproj
+++ b/Swimclub.REST/Swimclub.REST.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SwimclubStandard\SwimclubStandard.csproj" />
     <ProjectReference Include="..\Swimclub\Swimclub.csproj" />
   </ItemGroup>
 
