--- a/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
+++ b/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="Views\StudentsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\StudentTestingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SwimClassesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
