Added the IConfigurationService to read and access files in config

--- a/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
+++ b/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
@@ -57,4 +57,14 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource
+      Include="settings.json"
+      Condition="'$(Configuration)' != 'Debug' or !Exists('local.settings.json')" />
+    <EmbeddedResource
+      Include="local.settings.json"
+      Link="settings.json"
+      Condition="'$(Configuration)' == 'Debug' and Exists('local.settings.json')" />
+  </ItemGroup>
 </Project>
