added search bar and search functionality

--- a/Swimclub.REST/Swimclub.REST.csproj
+++ b/Swimclub.REST/Swimclub.REST.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>e07bb7a9-6e93-415a-9c73-dadf5744cac4</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
