added handling for android being idiot and throwing exceptions when trying to connect and breaking everything added login view model added settings page added funct. to change the ip to connect to saves ip to persistant storage so you dont have to change it every single time added more handling to erros

--- a/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
+++ b/Swimclub.Mobile/Swimclub.Mobile/Swimclub.Mobile.csproj
@@ -55,6 +55,9 @@
     <EmbeddedResource Update="Views\RegisterUserPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\StudentCollectionView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
